fix spacing for footer on SE

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1131,7 +1131,7 @@
         .credit {
             margin: auto;
             margin-top: (100/16rem);
-            width: 96%;
+            width: 80%;
             font-size: (16/16rem);
             line-height: (36/16rem);
             color: #c0c0c0;
